2004-05-13  Sushma Rai  <rsushma@novell.com>

	* storage/e-folder-exchange.c (e_folder_exchange_new): Adding
	ESources if the folder created is of the type personal calendar,
	tasks or contacts.
	(e_folder_exchange_delete): Deleting the ESource for the folder
	that is removed, if it is of the type, personal calendat. tasks
	or contacts.

	* storage/exchange-config-listener.c (add_esource): Made non-static
	(remove_esource) : Removing the source group in case of 
	account deletion and removing only the source for the perticular
	folder from the source group in case of folder deletion.
	Made non-static

	* storage/exchange-config-listener.h: Declarations for add_esource()
	and remove_esource()

	Fixes #57126, #57129 

2004-05-12  Dan Winship  <danw@novell.com>

	* storage/exchange-hierarchy-somedav.c: Split this out from
	exchange-hierarchy-foreign; new abstract class for hierarchies
	that are a subset of webdav folders from somewhere else.

	* storage/exchange-hierarchy-foreign.c: Now a subclass of
	ExchangeHierarchySomeDAV.

	* storage/exchange-hierarchy-favorites.c: New subclass of
	ExchangeHierarchySomeDAV for displaying "favorite" Public Folders.
	(Currently displays simple Outlook favorites correctly, but
	doesn't handle more complex cases, and no way to edit things.)

	* storage/exchange-account.c (exchange_account_connect): Create a
	favorites hierarchy.

	* lib/e2k-utils.c (e2k_entryid_to_permanenturl): New (to create a
	WebDAV permanent URL from a favorites entry)

2004-05-12  Dan Winship  <danw@ximian.com>

	* storage/exchange-change-password.glade: add this file, missing
	from the original import

	* storage/Makefile.am (glade_DATA): add
	exchange-change-password.glade

2004-05-12  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (add_sources)(remove_sources):
	Calling e_source_list_sync() after forming the sources for all the 
	folders for each component, instead of calling it for each folder 
	in a loop.
	Fixes bug #58320
 