@@ -1,5 +1,10 @@
 2004-05-13  Sushma Rai  <rsushma@novell.com>
 
+	* storage/exchange-hierarchy-webdav.c (xfer_folder): Removing
+	ESources for the folder which is renamed.
+
+2004-05-13  Sushma Rai  <rsushma@novell.com>
+
 	* storage/e-folder-exchange.c (e_folder_exchange_new): Adding
 	ESources if the folder created is of the type personal calendar,
 	tasks or contacts.
